# crm114

./: .gitignore  .gitmodules  AUTHORS  BUGS  CREDITS  ChangeLog  Doxyfile  HACKING  MAILINGLIST  Makefile  Makefile.am  NEWS  README  README.1st  README.maintainer  README.md  README.win32  TODO  aclocal.m4  autogen.sh  bootstrap  config.status  configure  configure.ac  crm114.kdevelop  crm114.kdevelop.filelist  crm114.kdevses  crm114.lsm  crm114.spec  crm114.spec.in  distribute_files_from_src_dir.sh  fix_crlf.sh  mk_distros.sh  setversion  uncrustify.cfg
crm114/: CREDITS  README  (+12 more)
crm114/src/: COLOPHON.txt  INTRO_mt_ng_reference_2.input  Makefile  Makefile.am  Makefile.vanilla  QUICKREF_mt_ng_reference_1.input  alternating_example_neural.crm  beeptest.crm  call_return_test.crm  classifymail.crm  config.h  config_vanilla_UNIX_sys_defaults.h  crm114.h  crm114.spec  crm114_structs.h  crm_bit_entropy.c  crm_bmp_image_io.cpp  crm_bmp_prof.h  crm_bmp_prof_collect.cpp  crm_bmp_prof_main.cpp  crm_bmp_prof_report.cpp  crm_bmp_prof_scan.cpp  crm_debugger.c  crm_errorhandlers.c  crm_expandvar.c  crm_expr_alter.c  crm_expr_classify.c  crm_expr_clump.c  crm_expr_match.c  crm_expr_sks.c  crm_fast_substring_compression.c  crm_generic_port.c  crm_markovian.c  crm_mjt_qsort.h  crm_neural_net.c  crm_osb_markovian_alt.c  crm_osb_winnow.c  crm_osb_winnow_alt.c  crm_pshpack1.h  crm_pshpack2.h  (+48 more)
docs/: COLOPHON.txt  CRM114_Mailfilter_HOWTO.txt  FAQ.txt  Makefile  Makefile.am  QUICKREF.txt  README  VT_generic_Vector_Tokenization.txt  inoc_passwd.txt  knownbugs.txt  reto_procmail_recipe.recipe  things_to_do.txt
examples/: Makefile  Makefile.am  megatest.sh  pad.crm  pad.crm.in  rewriteutil.crm  rewriteutil.crm.in  shroud.crm  shroud.crm.in
mailfilter/: Makefile  Makefile.am  classifymail.crm.in  mailfilter.cf  mailfilter.cf.in  mailfilter.crm  mailfilter.crm.in  maillib.crm.in  mailreaver.crm  mailreaver.crm.in  mailtrainer.crm  mailtrainer.crm.in  mkcss.crm  mkcss.crm.in  priolist.mfp  rewriteutil.crm.in  unionintersecttest.crm.in  whitelist.mfp.example
man/: Makefile  Makefile.am  crm.azm  crm114.azm  cssutil.azm  include.zmm  include.zmm.in
src/: Alice_In_Wonderland_Chap_1_And_2.txt  COLOPHON.txt  CRM114_Mailfilter_HOWTO.txt  FAQ.txt  Hound_of_the_Baskervilles_first_500_lines.txt  INTRO.txt  Macbeth_Act_IV.txt  Makefile  Makefile.BillY  Makefile.am  Makefile.vanilla  QUICKREF.txt  QUICKREF_mt_ng_reference_1.input  README  The_Wind_in_the_Willows_Chap_1.txt  VERSION.txt  aliustest.crm  alternating_example_neural.crm  alternating_example_pca.crm  alternating_example_svm.crm  approxtest.crm  argtest.crm  backwardstest.crm  beeptest.crm  bracesbugtest.crm  bracktest.crm  calc.crm  call_return_test.crm  classify_details.txt  classifymail.crm  classifytest.crm  config.h  config.h.in  config_BillY.h  config_vanilla_UNIX_sys_defaults.h  config_vanilla_UNIX_sys_defaults.h.in  config_win32.h  crm114-mode.el  crm114.h  crm114.sln  (+176 more)
src/BSD_build_files/: READ_ME_FIRST  build_crm114  crm114_P1_Makefile  read_me  shell_libs
src/spamfilterjig/: Makefile  aggregate.c  bootstrap2.c  diff1.c  dojoiner  dojoiner.bratko  jig_rungen.cpp  ken  kendall.c  mkplot.sh  normalize.c  uncrustify_openSSL.cfg
tests/: COLOPHON_mt_ng_reference_3.input  Makefile  Makefile.am  alius_w_comment.crm  alius_w_comment.crm.in  aliustest.crm  aliustest.crm.in  alternating_example_neural.crm  alternating_example_neural.crm.in  approxtest.crm  approxtest.crm.in  argtest.crm  argtest.crm.in  backwardstest.crm  backwardstest.crm.in  beeptest.crm  beeptest.crm.in  blowuptrapbugtest.crm  blowuptrapbugtest.crm.in  bracesbugtest.crm  bracesbugtest.crm.in  bracktest.crm  bracktest.crm.in  call_return_test.crm  call_return_test.crm.in  call_return_test2.crm  call_return_test3.crm  call_return_test4.crm  call_return_test5b.crm  call_return_test6.crm  classifytest.crm  classifytest.crm.in  crm114_classify.filter.awk  crm114_classify.filter.sh  crm114_classify.filter.sh.in  crm114_error_report.filter.sh  crm114_error_report.filter.sh.in  crm114_isolate_test.filter.sh.in  crm114_statustest.filter.sh.in  crm114_versiontest.filter.sh  (+139 more)
tests/ref/: ALT_OSBF_Local_Confidence_test1.step1.refoutput  ALT_OSBF_Local_Confidence_test1.step4.refoutput  ALT_OSB_3_letter_Hyperspace_test1.step1.refoutput  ALT_OSB_3_letter_Hyperspace_test1.step3.refoutput  ALT_OSB_Markov_Chisquared_Unique_test1.step1.refoutput  ALT_OSB_Markov_Chisquared_Unique_test1.step3.refoutput  ALT_OSB_Markov_Chisquared_Unique_test1.step4.refoutput  ALT_OSB_Markov_Unique_test1.step3.refoutput  ALT_OSB_Markovian_test1.step1.refoutput  ALT_OSB_Markovian_test1.step4.refoutput  ALT_OSB_Winnow_test1.step1.refoutput  ALT_OSB_Winnow_test1.step10.refoutput  ALT_OSB_Winnow_test1.step3.refoutput  ALT_OSB_Winnow_test1.step5.refoutput  ALT_OSB_Winnow_test1.step9.refoutput  ALT_String_Hyperspace_test1.step3.refoutput  ALT_String_Unigram_Hyperspace_test1.step2.refoutput  ALT_String_Unigram_Hyperspace_test1.step3.refoutput  ALT_String_Unigram_Hyperspace_test1.step4.refoutput  ALT_Unigram_Bayesian_test1.step4.refoutput  ALT_Unigram_Hyperspace_test1.step2.refoutput  ALT_Unigram_Winnow_test1.step1.refoutput  ALT_Unigram_Winnow_test1.step3.refoutput  ALT_Unigram_Winnow_test1.step6.refoutput  ALT_Vector_3_word_bag_Hyperspace_test1.step2.refoutput  ALT_Vector_3_word_bag_Hyperspace_test1.step3.refoutput  ALT_Vector_3_word_bag_Hyperspace_test1.step4.refoutput  Bit_Entropy_Toroid_test1.step3.refoutput  Bit_Entropy_Toroid_test1.step4.refoutput  Bit_Entropy_test1.step1.refoutput  Bit_Entropy_test1.step3.refoutput  Bit_Entropy_test1.step4.refoutput  Bytewise_Correlation_test1.step1.refoutput  Bytewise_Correlation_test1.step2.refoutput  Clump_Pmulc_test1.step1.refoutput  Clump_Pmulc_test1.step2.refoutput  Clump_Pmulc_test1.step3.refoutput  Clump_Pmulc_test1.step4.refoutput  Clump_Pmulc_test1.step5.refoutput  Fast_Substring_Compression_Match_test1.step2.refoutput  (+153 more)
tests/scowl/: english-upper.40  english-upper.50  english-words.10  english-words.35  english-words.40  english-words.50  english-words.60  english-words.80
(+467 files in other folders)
